--- a/meta/main.yaml
+++ b/meta/main.yaml
@@ -1,4 +1,16 @@
+---
 galaxy_info:
-    role_name: fluxcd-bootstrap
+  role_name: fluxcd-bootstrap
 
-dependencies: []
+dependencies:
+  - role: geerlingguy.pip
+    pip_install_packages:
+      - name: packaging
+      - name: setuptools
+      - name: requests
+        versions: 2.31.0  # HTTP bug in docker.py
+      - name: docker
+      - name: kubernetes
+        version: 29.0.0  # Newer versions update requests
+      - name: jsonpatch
+      - name: PyYAML
